Changelog
=========

1.0.1-UNRELEASED (2011-05-??)
------------------

- modifiche varie ai template per #126 #127 e #128 [andrea]
- destinatari da PropertySheetVocabulary [mmariani]

1.0.0 (2011-04-15)
------------------

- release iniziale da specifiche: https://support.redturtle.it/clienti/rer-regione-emilia-romagna/attivita-rer/119/
  [mmariani]
- AT Bando e AT Bando Folder Deepening [mmariani]
- vocabulary tipologie da file esterno XML [mmariani]
- portlet per le collection di bandi [mmariani]
- 2 viste per le collection di bandi [mmariani]
- form di ricerca [mmariani]
